<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llPlaceHolderState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_empty_no_transaction_history"
            android:layout_width="@dimen/feature_kyc_emptyStateImageSize"
            android:layout_height="@dimen/feature_kyc_emptyStateImageSize"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/feature_kyc_ic_error_state"
            android:contentDescription="@string/feature_kyc_content_description_placeholder" />

        <TextView
            android:id="@+id/tv_empty_no_transaction_history_title"
            android:layout_marginTop="@dimen/feature_kyc_marginItemsInSectionLarge"
            android:text="@string/feature_kyc_error_oops"
            android:textColor="@color/feature_kyc_colorTextPrimary"
            android:textSize="@dimen/feature_kyc_textBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_empty_no_transaction_history_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feature_kyc_marginItemsInSectionLarge"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/feature_kyc_marginItemsInSectionLarge"
            android:layout_marginBottom="@dimen/feature_kyc_marginItemsInSectionLarge"
            android:text="@string/feature_kyc_unexpected_error_subtitle"
            android:textAlignment="center"
            android:textColor="@color/feature_kyc_colorTextSecondary"
            android:textSize="@dimen/feature_kyc_textBody2" />
    </LinearLayout>
</layout>