<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/levelcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/feature_kyc_value_40dp"
            android:text="@string/feature_kyc_complete_kyc"
            android:textAlignment="center"
            android:textSize="@dimen/feature_kyc_value_15sp" />

        <LinearLayout
            android:id="@+id/lv1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feature_kyc_value_70dp"
            android:layout_marginTop="130dp">

            <Button
                android:id="@+id/blv1"
                style="@style/Widget.MaterialComponents.Button"
                android:background="@color/feature_kyc_colorAccent"
                android:layout_width="@dimen/feature_kyc_value_100dp"
                android:layout_height="@dimen/feature_kyc_value_50dp"
                android:layout_marginLeft="@dimen/feature_kyc_value_20dp"
                android:layout_marginRight="@dimen/feature_kyc_value_50dp"
                android:text="@string/feature_kyc_level_1" />

            <ImageView
                android:id="@+id/tickimg1"
                android:layout_width="@dimen/feature_kyc_value_20sp"
                android:layout_height="@dimen/feature_kyc_value_20sp"
                android:layout_marginTop="@dimen/feature_kyc_value_13sp"
                />

            <TextView
                android:id="@+id/completedtx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/feature_kyc_value_20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feature_kyc_value_70dp"
            android:layout_marginTop="210dp">

            <Button
                android:id="@+id/blv2"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/feature_kyc_value_100dp"
                android:layout_height="@dimen/feature_kyc_value_50dp"
                android:layout_marginLeft="@dimen/feature_kyc_value_20dp"
                android:layout_marginRight="@dimen/feature_kyc_value_50dp"
                android:text="@string/feature_kyc_level_2" />

            <ImageView
                android:id="@+id/tickimg2"
                android:layout_width="@dimen/feature_kyc_value_20sp"
                android:layout_height="@dimen/feature_kyc_value_20sp"
                android:layout_marginTop="@dimen/feature_kyc_value_13sp" />

            <TextView
                android:id="@+id/completedtx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/feature_kyc_value_20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feature_kyc_value_70dp"
            android:layout_marginTop="290dp">

            <Button
                android:id="@+id/blv3"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/feature_kyc_value_100dp"
                android:layout_height="@dimen/feature_kyc_value_50dp"
                android:layout_marginLeft="@dimen/feature_kyc_value_20dp"
                android:layout_marginRight="@dimen/feature_kyc_value_50dp"
                android:text="@string/feature_kyc_level_3" />

            <ImageView
                android:id="@+id/tickimg3"
                android:layout_width="@dimen/feature_kyc_value_20sp"
                android:layout_height="@dimen/feature_kyc_value_20sp"
                android:layout_marginTop="@dimen/feature_kyc_value_13sp" />

            <TextView
                android:id="@+id/completedtx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/feature_kyc_value_20dp" />

        </LinearLayout>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/pb_kyc"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <include
        android:id="@+id/inc_state_view"
        layout="@layout/feature_kyc_placeholder_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/feature_kyc_marginItemsInSectionLarge"
        android:visibility="gone" />

</layout>